--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "![Design preview for the Tip calculator app coding challenge](./preview.jpg)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass:watch": "sass --watch sass/style.scss:css/style.css",
+    "sass:build": "sass sass/style.scss:css/style.css",
+    "devserver": "live-server",
+    "start": "npm-run-all --parallel devserver sass:watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "live-server": "^1.2.2",
+    "npm-run-all": "^4.1.5",
     "sass": "^1.87.0"
   }
 }
